2018-09-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/rmarkdown/templates/presento/skeleton/presento.sty: Tweaks
	* inst/rmarkdown/templates/presento/skeleton/skeleton.Rmd: Ditto

	* inst/presentoDemo/presentoDemo.Rmd: Longer demo
	* inst/presentoDemo/presentoDemo.pdf: Ditto

	* docs/presento_minimal.pdf: Short demo for README
	* docs/presento_minimal.gif: Ditto

	* docs/metropolis_demo: Adding longer demo
	* docs/metropolis_iqss: Ditto
	* docs/metropolis_presento: Ditto

	* README.md: Added presento section, also added three longer demos

2018-09-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/rmarkdown/templates/presento/resources/template.tex: Do not
	set default font feature as presento is scaled up; default to 14pt

2018-09-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Minor release 0.0.1.1

	* R/binb.R: Code and documentation update to support presento
	* man/metropolis.Rd: Idem

	* inst/rmarkdown/templates/presento/: Added support files for
	'presento' theme by Ratul Saha translated from LaTeX to RMarkdown

2018-09-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Initial release 0.0.1

	* R/binb.R: Expanded manual page

	* inst/iqssDemo/: Move iqss vignette material here as vignette
	processing requires the Libertinus font which may not be present

	* .travis.yml (dist): Added simple Travis CI support

2018-09-18  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/iqssDemo.Rmd: Added vignette for IQSS, based on skeleton

	* vignettes/*: Addedd required IQSS support files, figures in iqss/

	* inst/rmarkdown/templates/iqss/skeleton/skeleton.Rmd: Updated
 	* inst/rmarkdown/templates/metropolis/skeleton/skeleton.Rmd: Idem

	* R/binb.R: Manual page update
	* man/metropolis.Rd: Idem

2018-09-17  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Added initial README
	* figures/: Four support pdf and gif files used by README

2018-09-16  Dirk Eddelbuettel  <edd@debian.org>
