@@ -5,7 +5,10 @@
 
 \section{Changes in binb version 0.0.2 (2018-xx-yy)}{
   \itemize{
-    \item Added support for 'Presento' theme by Ratul Saha
+    \item Added support for 'Presento' theme by Ratul Saha (\ghpr{4})
+    \item Longer vignettes were added to the docs/ directory
+    \item The gif files in docs/ were regenerated with the density
+    argument to convert set to 127 (Mikko Korpela in \ghpr{5})
   }
 }
 
